--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "compile": "hardhat compile",
+    "build": "hardhat compile",
     "test": "hardhat test",
     "deploy": "npx hardhat run ./scripts/deploy.ts --network"
   }
